table order sort and actions and fix global design

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -17,264 +17,18 @@
     </ng-container>
   </div>
 
-  <div class="d-flex flex-column gap-20">
-    <div class="d-flex gap-15">
-      <p-iconfield iconPosition="left" class="flex-grow-1">
-        <p-inputicon>
-          <i class="pi pi-search"></i>
-        </p-inputicon>
-        <input pInputText type="text" placeholder="Search" />
-      </p-iconfield>
-      <!-- [value]="dt1.filters['global']?.value"
-      (input)="dt1.filterGlobal($event.target.value, 'contains')" -->
-      <p-button
-        class="export-btn"
-        icon="pi pi-download"
-        label="Export"
-        (click)="dt1.exportCSV()"
-      />
-      <p-button
-        class="export-btn"
-        icon="pi pi-download"
-        label="Export"
-        (click)="dt1.exportCSV()"
-      />
-    </div>
+  <div class="d-flex flex-column tables-container">
+    <app-shifts-history
+      [products]="products"
+      [showSearchAndActions]="true"
+      stateKey="shift-history-one"
+    ></app-shifts-history>
 
-    <div class="card">
-      <p-table
-        #dt1
-        [value]="products"
-        [globalFilterFields]="['vehicle', 'plateNum']"
-        dataKey="id"
-        [tableStyle]="{ 'min-width': '50rem' }"
-        stateStorage="session"
-        stateKey="statedemo-session"
-      >
-        <ng-template #caption>
-          <div class="d-flex align-items-center gap-10">
-            <svg
-              style="margin: 0 8px"
-              width="20"
-              height="20"
-              viewBox="0 0 20 20"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M10.75 4.51209V8.54803L14.1644 6.84084C14.3423 6.75183 14.5483 6.73713 14.737 6.79998C14.9257 6.86284 15.0818 6.99809 15.1708 7.176C15.2598 7.3539 15.2745 7.55987 15.2116 7.74861C15.1488 7.93735 15.0135 8.09339 14.8356 8.1824L10.3356 10.4324C10.2213 10.4896 10.0943 10.5166 9.96657 10.5109C9.83887 10.5052 9.71474 10.467 9.60598 10.3998C9.49721 10.3327 9.40742 10.2388 9.34511 10.1272C9.28281 10.0156 9.25007 9.88992 9.25 9.76209V4.51209C9.25 4.31318 9.32902 4.12241 9.46967 3.98176C9.61033 3.84111 9.80109 3.76209 10 3.76209C10.1989 3.76209 10.3897 3.84111 10.5303 3.98176C10.671 4.12241 10.75 4.31318 10.75 4.51209ZM10 18.0121C8.36831 18.0121 6.77326 17.5282 5.41655 16.6217C4.05984 15.7152 3.00242 14.4267 2.378 12.9192C1.75358 11.4117 1.5902 9.75294 1.90853 8.15259C2.22685 6.55225 3.01259 5.08224 4.16637 3.92846C5.32016 2.77468 6.79017 1.98894 8.39051 1.67061C9.99085 1.35228 11.6497 1.51566 13.1571 2.14008C14.6646 2.76451 15.9531 3.82193 16.8596 5.17863C17.7661 6.53534 18.25 8.13039 18.25 9.76209C18.25 9.961 18.329 10.1518 18.4697 10.2924C18.6103 10.4331 18.8011 10.5121 19 10.5121C19.1989 10.5121 19.3897 10.4331 19.5303 10.2924C19.671 10.1518 19.75 9.961 19.75 9.76209C19.75 7.83372 19.1782 5.94866 18.1068 4.34528C17.0355 2.7419 15.5127 1.49222 13.7312 0.754264C11.9496 0.0163095 9.98919 -0.176773 8.09787 0.199433C6.20656 0.575639 4.46928 1.50424 3.10571 2.8678C1.74215 4.23136 0.813554 5.96864 0.437348 7.85996C0.061142 9.75127 0.254225 11.7117 0.992179 13.4933C1.73013 15.2748 2.97982 16.7976 4.58319 17.8689C6.18657 18.9403 8.07164 19.5121 10 19.5121C10.1989 19.5121 10.3897 19.4331 10.5303 19.2924C10.671 19.1518 10.75 18.961 10.75 18.7621C10.75 18.5632 10.671 18.3724 10.5303 18.2318C10.3897 18.0911 10.1989 18.0121 10 18.0121ZM19.7247 18.569C19.7522 18.6648 19.7603 18.7652 19.7485 18.8642C19.7367 18.9632 19.7053 19.0589 19.6561 19.1456C19.607 19.2324 19.541 19.3084 19.462 19.3694C19.3831 19.4303 19.2928 19.4749 19.1964 19.5005C19.1001 19.5261 18.9996 19.5323 18.9008 19.5186C18.802 19.5049 18.707 19.4716 18.6212 19.4208C18.5354 19.3699 18.4607 19.3025 18.4013 19.2224C18.3419 19.1423 18.2991 19.0511 18.2753 18.9543C18.01 17.9577 17.0744 17.2621 16 17.2621C14.9256 17.2621 13.99 17.9577 13.7247 18.9543C13.6823 19.1142 13.5883 19.2555 13.4572 19.3564C13.3261 19.4573 13.1654 19.512 13 19.5121C12.9348 19.5119 12.8699 19.5034 12.8069 19.4868C12.6147 19.4356 12.4507 19.3101 12.351 19.138C12.2513 18.9658 12.2241 18.7612 12.2753 18.569C12.5186 17.6656 13.0907 16.8859 13.8794 16.3827C13.4595 15.9633 13.1734 15.4287 13.0574 14.8467C12.9414 14.2647 13.0006 13.6613 13.2276 13.1129C13.4545 12.5646 13.8391 12.0958 14.3325 11.7661C14.8259 11.4363 15.4061 11.2602 15.9995 11.2602C16.593 11.2602 17.1732 11.4363 17.6666 11.7661C18.16 12.0958 18.5445 12.5646 18.7715 13.1129C18.9985 13.6613 19.0577 14.2647 18.9417 14.8467C18.8256 15.4287 18.5396 15.9633 18.1197 16.3827C18.9087 16.8857 19.4812 17.6655 19.7247 18.569ZM14.5 14.2621C14.5 14.5588 14.588 14.8488 14.7528 15.0954C14.9176 15.3421 15.1519 15.5344 15.426 15.6479C15.7001 15.7614 16.0017 15.7911 16.2926 15.7333C16.5836 15.6754 16.8509 15.5325 17.0607 15.3227C17.2704 15.113 17.4133 14.8457 17.4712 14.5547C17.5291 14.2638 17.4994 13.9622 17.3858 13.6881C17.2723 13.414 17.08 13.1797 16.8334 13.0149C16.5867 12.8501 16.2967 12.7621 16 12.7621C15.6022 12.7621 15.2206 12.9201 14.9393 13.2014C14.658 13.4827 14.5 13.8643 14.5 14.2621Z"
-                fill="#CECBDE"
-              />
-            </svg>
+    <hr class="divider" />
 
-            <div>
-              <label class="table-title">Afternoon Shift</label>
-              <p class="table-description m-0">12:00 PM - 08:00 PM</p>
-            </div>
-          </div>
-        </ng-template>
-
-        <ng-template #header>
-          <tr>
-            <th pSortableColumn="vehicle" style="width: 25%">
-              <div class="flex items-center gap-2">
-                Vehicle
-                <p-sortIcon field="vehicle" />
-              </div>
-            </th>
-            <th pSortableColumn="plateNum" style="width: 25%">
-              <div class="flex items-center gap-2">
-                PlateNum
-                <p-sortIcon field="plateNum" />
-              </div>
-            </th>
-            <th style="width: 25%">
-              <div class="flex items-center gap-2">odometer</div>
-            </th>
-            <th style="width: 25%">
-              <div class="flex items-center gap-2">GPS</div>
-            </th>
-            <th style="width: 25%">
-              <div class="flex items-center gap-2">device</div>
-            </th>
-            <th style="width: 25%">
-              <div class="flex items-center gap-2">SIM</div>
-            </th>
-            <th style="width: 25%">
-              <div class="flex items-center gap-2">fleet</div>
-            </th>
-            <th style="width: 25%">
-              <div class="flex items-center gap-2">Status</div>
-            </th>
-            <th pSortableColumn="status" style="width: 25%">
-              <div class="flex items-center gap-2">...</div>
-            </th>
-          </tr>
-        </ng-template>
-        <ng-template #body let-customer>
-          <tr [pSelectableRow]="customer">
-            <td>
-              <div class="d-flex flex-row gap-10">
-                <span class="vehicle-tag">MVC</span>
-                <span>{{ customer.vehicle }}</span>
-              </div>
-            </td>
-            <td>
-              <div class="flex items-center gap-2">
-                <span class="ml-1 align-middle">{{ customer.plateNum }}</span>
-              </div>
-            </td>
-            <td>
-              <div class="flex items-center gap-2">
-                <span class="ml-1 align-middle">{{ customer.odometer }}</span>
-              </div>
-            </td>
-            <td>
-              <div class="flex items-center gap-2">
-                <span class="ml-1 align-middle">{{ customer.GPS }}</span>
-              </div>
-            </td>
-            <td>
-              <div class="flex items-center gap-2">
-                <div class="d-flex flex-row align-items-center">
-                  <svg
-                    width="32"
-                    height="36"
-                    viewBox="0 0 32 36"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <g filter="url(#filter0_d_0_5)">
-                      <path
-                        d="M21.7656 18.1033L14.7656 25.6033C14.6914 25.6825 14.5935 25.7354 14.4866 25.754C14.3798 25.7727 14.2697 25.756 14.1731 25.7066C14.0765 25.6572 13.9986 25.5778 13.9512 25.4802C13.9037 25.3827 13.8892 25.2723 13.91 25.1658L14.8262 20.5827L11.2244 19.2302C11.147 19.2013 11.078 19.1536 11.0236 19.0915C10.9691 19.0294 10.9309 18.9548 10.9123 18.8743C10.8938 18.7938 10.8954 18.71 10.9172 18.6303C10.9389 18.5507 10.98 18.4776 11.0369 18.4177L18.0369 10.9177C18.111 10.8385 18.209 10.7856 18.3158 10.767C18.4227 10.7484 18.5328 10.765 18.6293 10.8144C18.7259 10.8638 18.8038 10.9433 18.8513 11.0408C18.8988 11.1384 18.9132 11.2487 18.8925 11.3552L17.9737 15.9433L21.5756 17.294C21.6524 17.3231 21.7208 17.3707 21.7748 17.4325C21.8289 17.4944 21.8668 17.5686 21.8854 17.6486C21.9039 17.7286 21.9024 17.8119 21.8811 17.8913C21.8598 17.9706 21.8193 18.0434 21.7631 18.1033H21.7656Z"
-                        fill="#4DBF77"
-                      />
-                    </g>
-                    <defs>
-                      <filter
-                        id="filter0_d_0_5"
-                        x="0.899536"
-                        y="0.759583"
-                        width="30.9987"
-                        height="35.0019"
-                        filterUnits="userSpaceOnUse"
-                        color-interpolation-filters="sRGB"
-                      >
-                        <feFlood
-                          flood-opacity="0"
-                          result="BackgroundImageFix"
-                        />
-                        <feColorMatrix
-                          in="SourceAlpha"
-                          type="matrix"
-                          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                          result="hardAlpha"
-                        />
-                        <feOffset />
-                        <feGaussianBlur stdDeviation="5" />
-                        <feComposite in2="hardAlpha" operator="out" />
-                        <feColorMatrix
-                          type="matrix"
-                          values="0 0 0 0 0.301961 0 0 0 0 0.74902 0 0 0 0 0.466667 0 0 0 1 0"
-                        />
-                        <feBlend
-                          mode="normal"
-                          in2="BackgroundImageFix"
-                          result="effect1_dropShadow_0_5"
-                        />
-                        <feBlend
-                          mode="normal"
-                          in="SourceGraphic"
-                          in2="effect1_dropShadow_0_5"
-                          result="shape"
-                        />
-                      </filter>
-                    </defs>
-                  </svg>
-
-                  <span class="ml-1 align-middle">{{
-                    customer.device.name
-                  }}</span>
-                  <br />
-                </div>
-                <span class="ml-1 align-middle">{{
-                  customer.device.serial
-                }}</span>
-                <br />
-              </div>
-            </td>
-            <td>
-              <div class="flex items-center gap-2">
-                <span class="ml-1 align-middle">{{ customer.SIM.name }}</span>
-                <br />
-                <span class="ml-1 align-middle">{{ customer.SIM.size }}</span>
-                <br />
-              </div>
-            </td>
-            <td>
-              <div class="flex items-center gap-2">
-                <span class="ml-1 align-middle">{{ customer.fleet }}</span>
-              </div>
-            </td>
-            <td>
-              <p-tag
-                [value]="customer.status"
-                [severity]="getSeverity(customer.status)"
-              />
-            </td>
-            <td>
-              <div class="d-flex">
-                <p-menu #menu [model]="items" [popup]="true" />
-                <p-button
-                  (click)="menu.toggle($event)"
-                  icon="pi pi-angle-down"
-                  variant="outlined"
-                  severity="contrast"
-                  label="Check"
-                />
-              </div>
-            </td>
-          </tr>
-        </ng-template>
-        <!-- <ng-template #body let-customer>
-            <tr [pSelectableRow]="customer">
-                <td>
-                    {{ customer.name }}
-                </td>
-                <td>
-                    <img
-                        src="https://primefaces.org/cdn/primeng/images/demo/flag/flag_placeholder.png"
-                        [class]="'flag flag-' + customer.country.code"
-                        style="width: 20px"
-                    />
-                    <span class="ml-1 align-middle">{{ customer.country.name }}</span>
-                </td>
-                <td>
-                    <img
-                        [alt]="customer.representative.name"
-                        src="https://primefaces.org/cdn/primeng/images/demo/avatar/{{
-                            customer.representative.image
-                        }}"
-                        width="32"
-                        style="vertical-align: middle"
-                    />
-                    <span class="ml-1 align-middle">{{ customer.representative.name }}</span>
-                </td>
-                <td>
-                    <p-tag [value]="customer.status" [severity]="getSeverity(customer.status)" />
-                </td>
-                <td>
-                    <p-menu #menu [model]="items" [popup]="true" />
-                    <p-button (click)="menu.toggle($event)" icon="pi pi-ellipsis-v" label="Check"/>
-                </td>
-            </tr>
-        </ng-template> -->
-        <ng-template emptymessage>
-          <tr>
-            <td colspan="4">No customers found.</td>
-          </tr>
-        </ng-template>
-      </p-table>
-    </div>
+    <app-shifts-history
+      [products]="products"
+      stateKey="shift-history-two"
+    ></app-shifts-history>
   </div>
 </div>
