dashoard & add user responsive design check

--- a/src/app/modules/dashboard/components/metric-card/metric-card.component.html
+++ b/src/app/modules/dashboard/components/metric-card/metric-card.component.html
@@ -1,4 +1,4 @@
-<p-card class="metric-card">
+<p-card class="metric-card" [style.--bg-opacity]="bgOpacity">
   <p-knob
     *ngIf="showProgress"
     [(ngModel)]="percentage"
