--- a/src/app/modules/organization/users/add-user/add-user.component.scss
+++ b/src/app/modules/organization/users/add-user/add-user.component.scss
@@ -83,6 +83,7 @@
 
 .form-container {
   max-width: 653px;
+  width: 100%;
   margin-top: 60px;
 }
 
@@ -108,5 +109,15 @@
     padding: 10px 15px;
     font-size: 14px;
     color: $btn-prim-text-click-focus;
+  }
+}
+
+@media (max-width: 768px) {
+  .form {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .user-fullname {
+    grid-template-columns: auto;
   }
 }
